# patro

./: .gitignore  .goreleaser.yaml  AGENTS.md  CLAUDE.md  README.md  config.yaml  go.mod  go.sum  install-wizard.py  pyproject.toml
.github/workflows/: release.yml
Formula/: patro.rb
cmd/patro/: init.go  init_test.go  init_tui.go  main.go  main_test.go
install/: install.sh
install/macos/: com.scribe.plist
install/systemd/: scribe.service
internal/analyzer/: analyzer.go  analyzer_test.go  cli.go  cli_test.go  lemur.go
internal/config/: config.go  config_test.go
internal/logging/: logging.go
internal/pipeline/: pipeline.go
internal/setup/: config.go  config_test.go  service.go  service_test.go  setup.go
internal/state/: state.go  state_test.go
internal/status/: status.go  status_test.go
internal/transcriber/: transcriber.go  transcriber_test.go
internal/tui/: dashboard.go  data.go  data_test.go  menu.go  menu_test.go  render_test.go  settings.go  settings_test.go  theme.go  tui.go  tui_test.go  view.go  wizard_theme.go
internal/types/: types.go
internal/watcher/: watcher.go  watcher_test.go
internal/web/: web.go  web_test.go
scribe/: __init__.py  __main__.py  analyzer.py  claude_analyzer.py  config.py  install_wizard.py  kimi_analyzer.py  library.py  pipeline.py  state.py  transcriber.py  watcher.py
