[project]
name = "meeting-scribe"
version = "0.1.0"
description = "Local service that watches an OBS recordings folder, transcribes with AssemblyAI, distills knowledge with LeMUR and builds a Markdown knowledge library"
requires-python = ">=3.11"
dependencies = [
    "watchdog",
    "assemblyai",
    "pyyaml",
]

[project.scripts]
scribe = "scribe.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scribe"]
