[project]
name = "patro-scriber"
version = "0.1.0"
description = "Local service that watches a recordings folder, transcribes with AssemblyAI, distills knowledge with Kimi/Claude/LeMUR and builds a Markdown knowledge library"
requires-python = ">=3.11"
dependencies = [
    "watchdog",
    "assemblyai",
    "pyyaml",
    "rich",
]

[project.scripts]
patro-scriber = "scribe.__main__:main"
scribe = "scribe.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scribe"]
